fix stretched icons

--- a/src/BenefitRow.css
+++ b/src/BenefitRow.css
@@ -11,6 +11,7 @@
   width: 30%;
   padding: 20px;
   box-sizing: border-box;
+  object-fit: contain;
 }
 
 @media (min-width: 750px) {
